syntax = "proto3";

option csharp_namespace = "netponto.AssetManagement.Protos";

option go_package="./;gen";

package AssetManagement;

service Asset {
	rpc ListAssets (ListAssetsRequest) returns (ListAssetsResponse);
	rpc CreateAsset (CreateAssetRequest) returns (CreateAssetResponse);
}

// List Assets
message ListAssetsRequest {			
  string tenantCode = 1;
  int32	 index = 2;
  int32	 size = 3;
  string sort = 4;
  string order = 5;
}

message ListAssetsResponse {
  repeated AssetResponse data = 1;
  int32	totalCount = 2;
}

message AssetResponse {
	int64 id = 1;
	string name = 2;
}

// Create Asset
message CreateAssetRequest {
	string tenantCode = 1;
	string serialNumber = 2;
}

message CreateAssetResponse {
	string url = 1;
}